<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_normal">

    <TextView android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_normal"
        android:text="@string/textview_title"/>
    
    <EditText android:id="@+id/et_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_title"
        android:hint="@string/edittext_title"/>

    <TextView android:id="@+id/tv_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_title"
        android:textSize="@dimen/text_normal"
        android:text="@string/textview_content"/>

    <EditText android:id="@+id/et_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/tv_content"
        android:layout_above="@+id/btn_submit"
        android:hint="@string/edittext_content"/>

    <Button android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/button_create"/>

</RelativeLayout>
