...
    <string name="button_reset_password">Reset password</string>
    <string name="button_goto_login">I already have an account</string>
    <string name="button_settings">Settings</string>

    <string name="button_create_new_note">Create a new note</string>
    <string name="button_create">Create</string>
    <string name="button_save">Save</string>
    <string name="button_edit">Edit</string>
    <string name="button_delete">Delete</string>

    <string name="edittext_email">Email…</string>
    <string name="edittext_password">Password…</string>
    <string name="edittext_password_confirmation">Confirm password…</string>
...
