<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:padding="@dimen/padding_normal">

    <EditText android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:inputType="textEmailAddress"
        android:hint="@string/edittext_email" />

    <EditText android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_email"
        android:inputType="textPassword"
        android:hint="@string/edittext_password"/>

    <EditText android:id="@+id/et_password_confirmation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_password"
        android:inputType="textPassword"
        android:hint="@string/edittext_password_confirmation"/>

    <Button android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_password_confirmation"
        android:text="@string/button_register"/>

</RelativeLayout>
